Java inspection warnings second pass